# veledara-project-manager

./: .gitignore  pyproject.toml
src/: main.py  project_manager.py  ui.py
